cmake_minimum_required(VERSION 2.8)

project(FLMLreader)

cmake_policy(SET CMP0003 NEW)

if(POLICY CMP0023)
  cmake_policy(SET CMP0023 OLD)
  cmake_policy(SET CMP0042 OLD)
endif(POLICY CMP0023)


FIND_PACKAGE(ParaView REQUIRED)
INCLUDE(${PARAVIEW_USE_FILE})



ADD_PARAVIEW_PLUGIN(
  FLMLreader "0.0"
  SERVER_MANAGER_XML FLMLreader.xml
  SERVER_MANAGER_SOURCES FLMLreader.h FLMLreader.cxx
  GUI_RESOURCE_FILES FLMLreaderGUI.xml
  )


FIND_LIBRARY(SPUD_LIBRARY spud)
INCLUDE_DIRECTORIES( ../GMSHreader)
INCLUDE_DIRECTORIES( ../SplitBcs)
TARGET_LINK_LIBRARIES(FLMLreader ${SPUD_LIBRARY} GMSHreader SplitBcs)

SET_TARGET_PROPERTIES(FLMLreader PROPERTIES INSTALL_RPATH "@loader_path/../plugins")
